--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   border-radius: 40px;
   border: 1px solid #fff;
   color: #fff;
-  font-size: 17px;
+  font-size: 20px;
   text-align: center;
 
   outline: none;
@@ -80,6 +80,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 .cityName p {
   color: #000;
@@ -132,7 +133,7 @@ body {
 @media (max-width: 700px) {
   .box {
     width: 83vw;
-    height: 80vh;
+    height: 65vh;
   }
   .input input {
     border-radius: 40px;
@@ -147,7 +148,7 @@ body {
   }
   .weatherNumber p {
     font-size: 20px;
-    color: #afcbc1;
+    color: #bacfc7;
   }
   .weatherNumber .temp .tempData {
     font-size: 20px;
